<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 标题 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/azure" >

        <Button
            android:id="@+id/search_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:drawableLeft="@drawable/arrow_left"
            android:text="@string/common_return"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/search_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/search_notice"
                android:layout_centerVertical="true"
                android:background="@drawable/search_title_background"
                android:button="@null"
                android:checked="true"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:text="@string/search_notice"
                android:textColor="@drawable/search_title_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/search_individual"
                android:layout_centerVertical="true"
                android:background="@drawable/search_title_background"
                android:button="@null"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="5dp"
                android:text="@string/search_individual"
                android:textColor="@drawable/search_title_text"
                android:textSize="15sp" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="#00000000"
            android:drawableLeft="@drawable/seek"
            android:text="@string/common_search"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
<!-- 
    <com.saasapp.tools.RefreshableView
        android:id="@+id/search_refreshable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" > -->
        <!-- 公告列表 -->
        <ListView
            android:id="@+id/search_noticelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
<!--   </com.saasapp.tools.RefreshableView> -->  

</LinearLayout>