<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/reg_mydoc_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_doc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/reg_mydoc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reg_mydoc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/gray1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/reg_mydoc_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="15sp"
                android:lines="2" />
        </LinearLayout>
        
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal"
	    android:layout_marginTop="6dp">
	    <Button 
	        android:id="@+id/reg_mydoc_todayreg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textSize="15sp"
	        android:background="@drawable/my_blue_deongaree"
	        android:text="@string/reg_mydoc_todayreg"
	        android:textColor="@color/white"/>
	    <Button 
	        android:id="@+id/reg_mydoc_bookreg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textSize="15sp"
	        android:background="@drawable/my_blue_deongaree"
	        android:text="@string/reg_mydoc_bookreg"
	        android:textColor="@color/white"/>
	    <Button 
	        android:id="@+id/reg_mydoc_detel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_centerVertical="true"
	        android:gravity="center"
	        android:textSize="15sp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textColor="@color/white"
	        android:background="@drawable/my_blue_deongaree"
	        android:text="@string/reg_mydoc_delete"/>
	</LinearLayout>
</LinearLayout>